# serializer version: 1
# name: test_converation_record
  '''
  <|begin_of_text|><|start_header_id|>system<|end_header_id|>
  
  Environment: ipython
  Cutting Knowledge Date: December 2023
  Today Date: 26 Jul 2024
  
  You are a helpful assistant.<|eot_id|><|start_header_id|>user<|end_header_id|>
  
  Given the following functions, please respond with a JSON for a function call with its proper arguments that best answers the given prompt.
  
  Respond in the format {"name": function name, "parameters": dictionary of argument name and its value}.Do not use variables.
  
  {
      "type": "function",
      "function": {
          "name": "get_current_conditions",
          "description": "Get the current weather conditions for a specific location",
          "parameters": {
              "location": {
                  "type": "string"
              }
          }
      }
  }
  
  What is the weather like today in SF?<|eot_id|><|start_header_id|>assistant<|end_header_id|>
  
  {"name": "get_current_conditions", "parameters": {"location": "San Francisco, CA"}}<|eot_id|>
  '''
# ---
# name: test_converation_record_output
  '''
  <|begin_of_text|><|start_header_id|>system<|end_header_id|>
  
  Environment: ipython
  Cutting Knowledge Date: December 2023
  Today Date: 26 Jul 2024
  
  You are a helpful assistant.<|eot_id|><|start_header_id|>user<|end_header_id|>
  
  Given the following functions, please respond with a JSON for a function call with its proper arguments that best answers the given prompt.
  
  Respond in the format {"name": function name, "parameters": dictionary of argument name and its value}.Do not use variables.
  
  {
      "type": "function",
      "function": {
          "name": "get_current_conditions",
          "description": "Get the current weather conditions for a specific location",
          "parameters": {
              "location": {
                  "type": "string"
              }
          }
      }
  }
  
  What is the weather like today in SF?<|eot_id|><|start_header_id|>assistant<|end_header_id|>
  
  I can't help you with that.<|eot_id|>
  '''
# ---
# name: test_conversation
  '''
  <|begin_of_text|><|start_header_id|>system<|end_header_id|>
  
  Cutting Knowledge Date: December 2023
  Today Date: 26 Jul 2024
  
  You are a helpful assistant.<|eot_id|><|start_header_id|>user<|end_header_id|>
  
  What is the capital of France?<|eot_id|><|start_header_id|>assistant<|end_header_id|>
  
  The capital of France is Paris.<|eot_id|>
  '''
# ---
# name: test_system
  '''
  <|begin_of_text|><|start_header_id|>system<|end_header_id|>
  
  Cutting Knowledge Date: December 2023
  Today Date: 26 Jul 2024
  
  You are a helpful assistant.<|eot_id|><|start_header_id|>assistant<|end_header_id|>
  
  
  '''
# ---
# name: test_system_tools
  '''
  <|begin_of_text|><|start_header_id|>system<|end_header_id|>
  
  Environment: ipython
  Cutting Knowledge Date: December 2023
  Today Date: 26 Jul 2024
  
  You are a helpful assistant.<|eot_id|><|start_header_id|>user<|end_header_id|>
  
  Given the following functions, please respond with a JSON for a function call with its proper arguments that best answers the given prompt.
  
  Respond in the format {"name": function name, "parameters": dictionary of argument name and its value}.Do not use variables.
  
  {
      "type": "function",
      "function": {
          "name": "get_current_conditions",
          "description": "Get the current weather conditions for a specific location",
          "parameters": {
              "location": {
                  "type": "string"
              }
          }
      }
  }
  
  What is the weather like today in SF?<|eot_id|><|start_header_id|>assistant<|end_header_id|>
  
  
  '''
# ---
# name: test_tool_call
  '''
  <|begin_of_text|><|start_header_id|>system<|end_header_id|>
  
  Environment: ipython
  Cutting Knowledge Date: December 2023
  Today Date: 26 Jul 2024
  
  You are a helpful assistant.<|eot_id|><|start_header_id|>user<|end_header_id|>
  
  Given the following functions, please respond with a JSON for a function call with its proper arguments that best answers the given prompt.
  
  Respond in the format {"name": function name, "parameters": dictionary of argument name and its value}.Do not use variables.
  
  {
      "type": "function",
      "function": {
          "name": "get_current_conditions",
          "description": "Get the current weather conditions for a specific location",
          "parameters": {
              "location": {
                  "type": "string"
              }
          }
      }
  }
  
  What is the weather like today in SF?<|eot_id|><|start_header_id|>assistant<|end_header_id|>
  
  {"name": "get_current_conditions", "parameters": {"location": "San Francisco, CA"}}<|eot_id|><|start_header_id|>ipython<|end_header_id|>
  
  {"output": "Clouds giving way to sun Hi: 76° Tonight: Mainly clear early, then areas of low clouds forming Lo: 56°"}<|eot_id|><|start_header_id|>assistant<|end_header_id|>
  
  
  '''
# ---
# name: test_tool_call_conversation
  '''
  <|begin_of_text|><|start_header_id|>system<|end_header_id|>
  
  Environment: ipython
  Cutting Knowledge Date: December 2023
  Today Date: 26 Jul 2024
  
  You are a helpful assistant.<|eot_id|><|start_header_id|>user<|end_header_id|>
  
  Given the following functions, please respond with a JSON for a function call with its proper arguments that best answers the given prompt.
  
  Respond in the format {"name": function name, "parameters": dictionary of argument name and its value}.Do not use variables.
  
  {
      "type": "function",
      "function": {
          "name": "get_current_conditions",
          "description": "Get the current weather conditions for a specific location",
          "parameters": {
              "location": {
                  "type": "string"
              }
          }
      }
  }
  
  What is the weather like today in SF?<|eot_id|><|start_header_id|>assistant<|end_header_id|>
  
  {"name": "get_current_conditions", "parameters": {"location": "San Francisco, CA"}}<|eot_id|><|start_header_id|>ipython<|end_header_id|>
  
  {"output": "Clouds giving way to sun Hi: 76° Tonight: Mainly clear early, then areas of low clouds forming Lo: 56°"}<|eot_id|><|start_header_id|>assistant<|end_header_id|>
  
  The weather in SF looks cloudy today.<|eot_id|>
  '''
# ---
